metadata/force-app/main/default/objects/PricebookEntry/fields/Acquia_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Acquia_List_Price__c</fullName>
    <description>Stores the list price specific to Acquia OEM.</description>
    <label>Acquia List Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>