metadata/force-app/main/default/objects/PricebookEntry/fields/Acquia_List_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Acquia_List_Price_ARR_One_off__c</fullName>
    <description>Stores the list price ARR specific to Acquia OEM.</description>
    <formula>IF(Product2.For_Contract_Renewals__c = True &amp;&amp; NOT(ISBLANK(Acquia_List_Price__c)), Acquia_List_Price__c * 12,
Acquia_List_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquia List Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>