metadata/force-app/main/default/objects/PricebookEntry/fields/List_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>List_Price_ARR_One_off__c</fullName>
    <description>Returns list price in ARR or One-off</description>
    <formula>IF(Product2.For_Contract_Renewals__c = True, 
UnitPrice * 12,
UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>