metadata/force-app/main/default/objects/PricebookEntry/fields/Price_Book_Entry_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_ID_18_digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Entry ID (18 digits)</label>
    <type>Text</type>
</CustomField>