metadata/force-app/main/default/objects/PricebookEntry/fields/Workfront_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Workfront_List_Price__c</fullName>
    <description>Stores the list price specific to Workfront OEM(1st Year).</description>
    <label>Workfront List Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>