metadata/force-app/main/default/objects/PricebookEntry/fields/Workfront_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Workfront_Renewal_Price__c</fullName>
    <description>Stores the list price specific to Workfront OEM(From 2nd Year).</description>
    <label>Workfront Renewal Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>